--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,7 @@
 # GitHub Action for generating a contribution graph with a snake eating your contributions.
 
+# GitHub Action for generating a contribution graph with a snake eating your contributions.
+
 name: Generate Snake
 
 # Controls when the action will run. This action runs every 6 hours.
@@ -7,7 +9,7 @@ name: Generate Snake
 on:
   schedule:
       # every 6 hours
-    - cron: "0 */6 * * *"
+    - cron: "0 */24 * * *"
 
 # This command allows us to run the Action automatically from the Actions tab.
   workflow_dispatch:
